# reddit_twitter_scrapper

./: Dockerfile  README.md  exceptions.py  function_app.py  mongo_db.py  pyproject.toml  requirements.txt  script.py
db/: mongo.py
enums/: xpaths.py
models/: reddit.py  tweeter.py
scrappers/: base.py  reddit.py  twitter.py
tests/: test_reddit.py
